# streamfy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  action.yaml  cliff.toml  install.sh
connector/json-test-connector/: Cargo.toml  Connector.toml
connector/json-test-connector/src/: main.rs  source.rs
connector/sink-test-connector/: Cargo.toml  Connector.toml  sample-config-v2.yaml  sample-config.yaml
connector/sink-test-connector/src/: main.rs  sink.rs
crates/cdk/: Cargo.toml
crates/cdk/src/: cmd.rs  deploy.rs  generate.rs  main.rs  test.rs
crates/smartmodule-development-kit/: Cargo.toml
crates/smartmodule-development-kit/src/: cmd.rs  generate.rs  load.rs  main.rs  test.rs
crates/streamfy-auth/: Cargo.toml  README.md
crates/streamfy-auth/src/: policy.rs  root.rs
crates/streamfy-auth/src/x509/: authenticator.rs  identity.rs  request.rs
crates/streamfy-channel/: Cargo.toml
crates/streamfy-channel-cli/: Cargo.toml
crates/streamfy-channel-cli/src/: lib.rs
crates/streamfy-channel-cli/src/cli/: create.rs  delete.rs  list.rs  mod.rs  switch.rs
crates/streamfy-channel-cli/tests/: issue_2168_regression.rs  pinned_version_channel.rs
crates/streamfy-channel/src/: lib.rs
crates/streamfy-cli/: Cargo.toml  README.md
crates/streamfy-cli-common/: Cargo.toml
crates/streamfy-cli-common/src/: error.rs  install.rs  lib.rs  smartmodule.rs  user_input.rs
crates/streamfy-cli-common/src/version_cmd/: basic.rs  mod.rs
crates/streamfy-cli/src/: error.rs  lib.rs  metadata.rs  monitoring.rs  version.rs
crates/streamfy-cli/src/client/: mod.rs  smartmodule_invocation.rs
crates/streamfy-cli/src/profile/: add.rs  current.rs  delete_cluster.rs  delete_profile.rs  export.rs  list.rs  mod.rs  rename.rs  switch.rs
crates/streamfy-cli/test-data/: test-config.yaml
crates/streamfy-cli/test-data/group-cfg/: valid_config.json
crates/streamfy-cluster/: Cargo.toml  build.rs
crates/streamfy-cluster/src/: delete.rs  error.rs  lib.rs  progress.rs
crates/streamfy-cluster/src/charts/: chart.rs  location.rs  mod.rs
crates/streamfy-cluster/src/check/: mod.rs  render.rs
crates/streamfy-cluster/src/cli/: check.rs  delete.rs  diagnostics.rs  error.rs  mod.rs  resume.rs  shutdown.rs  status.rs  upgrade.rs
crates/streamfy-cluster/src/process/: mod.rs
crates/streamfy-cluster/src/runtime/: mod.rs
crates/streamfy-cluster/src/start/: common.rs  k8.rs  local.rs  mod.rs
crates/streamfy-cluster/test-data/: metadata.json
crates/streamfy-command/: Cargo.toml  README.md
crates/streamfy-command/src/: lib.rs
crates/streamfy-compression/: Cargo.toml  README.md
crates/streamfy-compression/src/: gzip.rs  lib.rs  lz4.rs  snappy.rs  zstd.rs
crates/streamfy-connector-common/: Cargo.toml
crates/streamfy-connector-common/src/: config.rs  consumer.rs  lib.rs  monitoring.rs  producer.rs  smartmodule.rs
crates/streamfy-connector-common/ui-test/: mod.rs
crates/streamfy-connector-common/ui-test/ui/: config_input_self.rs  config_use_reserved_name_streamfy.rs  config_use_reserved_name_streamfy.stderr  config_use_reserved_name_transforms.rs  config_use_reserved_name_transforms.stderr  invalid_config_type.rs  not_async.rs  struct_without_config.rs  (+4 more)
crates/streamfy-connector-package/: Cargo.toml
crates/streamfy-connector-package/src/: metadata.rs
crates/streamfy-connector-package/tests/: Connector.toml  mod.rs  sample-mqtt.yaml
crates/streamfy-controlplane/: Cargo.toml
crates/streamfy-controlplane-metadata/: Cargo.toml  README.md
crates/streamfy-controlplane-metadata/src/: lib.rs
crates/streamfy-controlplane-metadata/tests/: SmartModule.toml  SmartModule.yaml  k8_mirror_v1.json  k8_mirror_v1.yaml  k8_partition_mirror_v1.json  k8_topic_mirror_down_v1.json  k8_topic_mirror_down_v2.json  sm_k8_v1.yaml  sm_k8_v2.json  sm_k8_v2.yaml  topic_assignment.json  topic_computed.yaml
crates/streamfy-controlplane/src/: lib.rs  replica.rs
crates/streamfy-extension-common/: Cargo.toml  README.md
crates/streamfy-extension-common/src/: installation.rs  lib.rs  tls.rs
crates/streamfy-future/: CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
crates/streamfy-future/certs/: Makefile  cert.conf  intermediate-cert.conf  openssl.cnf
crates/streamfy-future/src/: lib.rs  native_tls.rs  retry.rs  rust_tls.rs  test_util.rs  timer.rs  zero_copy.rs
crates/streamfy-future/streamfy-future-derive/: Cargo.toml
crates/streamfy-helm/: Cargo.toml  README.md
crates/streamfy-helm/src/: error.rs  lib.rs
crates/streamfy-hub-protocol/: Cargo.toml  README.md
crates/streamfy-hub-protocol/src/: errors.rs  lib.rs  package_meta.rs  streamfy_tok.rs
crates/streamfy-k8-client/: Cargo.toml  README.md
crates/streamfy-k8-client/src/: uri.rs
crates/streamfy-k8-client/tests/: canary.rs  error.rs  job.rs  pod_affinity.rs  replace.rs  service.rs
crates/streamfy-k8-config/: Cargo.toml  README.md
crates/streamfy-k8-config/examples/: kubeconfig_read.rs
crates/streamfy-k8-config/src/: context.rs
crates/streamfy-k8-diff/: Cargo.toml  README.md
crates/streamfy-k8-diff/src/: lib.rs
crates/streamfy-k8-metadata-client/: Cargo.toml  README.md
crates/streamfy-k8-types/: Cargo.toml  README.md
crates/streamfy-k8-types/src/: crd.rs  metadata.rs  store.rs
crates/streamfy-kv-storage/: Cargo.toml
crates/streamfy-kv-storage/src/: lib.rs  log.rs
crates/streamfy-package-index/: Cargo.toml
crates/streamfy-package-index/src/: http.rs  lib.rs  package.rs  package_id.rs  target.rs  version.rs
crates/streamfy-protocol/: CONTRIBUTING.md  Cargo.toml  README.md
crates/streamfy-protocol/api-test/: api.rs
crates/streamfy-protocol/benches/: bench.rs
crates/streamfy-protocol/src/: lib.rs  store.rs
crates/streamfy-protocol/tests/: btreemap.rs  decode.rs  default.rs  encode.rs  enum.rs  generic.rs  option.rs  str.rs  tuple_struct.rs  version.rs
crates/streamfy-protocol/ui-tests/: pass_derive_decode.rs  pass_derive_decode_encode_with_custom_results.rs  pass_derive_encode.rs
crates/streamfy-run/: Cargo.toml
crates/streamfy-run/src/: lib.rs
(+920 files in other folders)
