[package]
name = "sink-test-connector"
description = "Connector that reads data from a topic and prints to stdout"
version = "0.0.0"
publish = false
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
serde = { default-features = false, features = ["derive"], workspace = true }

streamfy = { path = "../../crates/streamfy/", features = ["smartengine"]}
streamfy-connector-common = { path = "../../crates/streamfy-connector-common/", features = ["derive"] }

