[package]
name = "smartmodule-development-kit"
description = "SmartModule Development Kit"
version = "0.0.0"
publish = false
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "smdk"
path = "src/main.rs"
doc = false

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "help", "usage", "error-context", "env", "wrap_help", "suggestions"], default-features = false }
enum-display = { workspace = true }
cargo-generate = { workspace = true }
include_dir = { workspace = true }
tempfile = { workspace = true }
lib-cargo-crate = { workspace = true }
openssl = { workspace = true, features = ["vendored"] } # cargo-generate requires openssl


streamfy = { workspace = true }
streamfy-future = { workspace = true, features = ["subscriber"]}
streamfy-smartengine = { workspace = true, features = ["transformation"] }
streamfy-extension-common = { workspace = true, features = ["target"] }
streamfy-controlplane-metadata = { workspace = true, features = ["smartmodule"] }
streamfy-cli-common = { workspace = true, features = ["file-records", "version-cmd", "serde", "smartmodule-test"] }
cargo-builder = { path = "../cargo-builder"}
