[package]
name = "streamfy-channel"
description = "Streamfy channels support"
version = "0.0.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
name = "streamfy_channel"
path = "src/lib.rs"

[features]
default = ["streamfy-types"]

[dependencies]
clap = { workspace = true, features = ["std", "derive", "help", "usage", "error-context"], default-features = false }
cfg-if = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true, features = ["display", "parse"]}
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

streamfy-types = { workspace = true,  optional = true }