[package]
name = "streamfy-extension-common"
description = "Streamfy extension common"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "streamfy_extension_common"
path = "src/lib.rs"

[features]
target = ["streamfy"]
installation = ["streamfy"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "help", "usage", "error-context"], default-features = false }
chrono = { workspace = true }
comfy-table = { workspace = true }
serde = { workspace = true, features = ['derive'] }
serde_json ={ workspace = true }
serde_yaml = { workspace = true }
semver = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
timeago = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true, features = ["display"] }

streamfy = { workspace = true,  optional = true }
streamfy-package-index = { workspace = true  }
