[package]
name = "streamfy-future"
version = "0.8.3"
edition = "2024"
authors = ["Streamfy Contributors <team@streamfy.io>"]
description = "I/O futures for Streamfy project"
repository = "https://github.com/streamfy/future-aio"
license = "Apache-2.0"


[package.metadata.docs.rs]
all-features = true

[features]
task = ["cfg-if", "async-task", "timer"]
subscriber = ["tracing-subscriber", "tracing-subscriber/std", "tracing-subscriber/env-filter"]
fixture = ["subscriber", "task", "streamfy-future-derive"]
future = ["futures-lite"]
io = ["async-fs", "async-io"]
net = ["futures-lite", "async-net", "async-trait", "cfg-if", "futures-util/io", "socket2", "streamfy-ws-stream-wasm"]
tls = ["rust_tls"]
# rustls dep with ring: ensure a provider is available when aws-lc-rs is also
# unified in (rustls 0.23 requires install_default if multiple providers are linked).
rust_tls = ["net", "rustls-pemfile", "futures-rustls", "dep:rustls", "pin-project", "futures-util/io"]
# native_tls identity helpers use the openssl crate; vendor so hosts without system OpenSSL still build.
native_tls = ["net", "pin-project", "async-native-tls", "dep:native-tls", "openssl/vendored", "futures-util/io"]
# Vendored OpenSSL by default so macOS/Linux hosts without pkg-config + libssl-dev still build
# (Apple only ships LibreSSL without headers). To link system OpenSSL instead:
#   OPENSSL_NO_VENDOR=1 and install openssl + pkg-config (e.g. brew install openssl@3 pkgconf).
# `openssl_vendored` remains as an explicit alias for CI/musl feature flags.
openssl_tls = ["net", "openssl", "openssl-sys", "pin-project", "futures-util/io", "openssl_vendored"]
openssl_vendored = ["openssl?/vendored", "openssl-sys?/vendored"]
timer = ["async-io", "pin-project", "futures-lite", "streamfy-wasm-timer"]
fs = ["async-fs", "futures-lite", "pin-utils", "async-trait"]
zero_copy = ["nix", "task"]
mmap = ["fs", "memmap2", "task"]
retry = ["timer", "cfg-if", "async-trait", "futures-util/io"]
doomsday = ["task", "async-lock"]
attributes = []

[dependencies]
async-trait = { version = "0.1.88", optional = true }
anyhow = { version = "1.0" }
cfg-if = { version = "1.0", optional = true }
streamfy-future-derive = { path = "streamfy-future-derive", version = "0.2.0", optional = true }
futures-lite = { version = "2.6", optional = true }
futures-util = { version = "0.3.31", optional = true }
pin-project = { version = "1.1", optional = true }
pin-utils = { version = "0.1.0", optional = true }
thiserror = "2.0.12"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.45", default-features = false}
async-global-executor = { version = "3.1.0", features = ["tokio"] }
async-fs = { version = "2.1", optional = true }
async-io = { version = "2.4", optional = true }
async-native-tls = { version = "0.5.0", optional = true }
async-net = { version = "2.0", optional = true }
async-lock = { version = "3.4", optional = true }
async-task = { version = "4.7", optional = true }
futures-rustls = { version = "0.26.0", optional = true }
# Prefer ring when dual crypto providers are linked via feature unification.
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12", "ring"] }
memmap2 = { version = "0.9.5", optional = true }
native-tls = { version = "0.2.14", optional = true }
nix = { version = "0.30.1", optional = true, features = ["zerocopy"] }
openssl = { version = "0.10.71", optional = true }
openssl-sys = { version = "0.9.109", optional = true }
openssl-src = { version = "=300.4.2+3.4.1", optional = true } # https://github.com/streamfy/streamfy/issues/4502
rustls-pemfile = { version = "2.2", optional = true }
socket2 = { version = "0.5.10", default-features = false, features = ["all"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.45" }
streamfy-wasm-timer = { path = "../streamfy-wasm-timer", optional = true }
streamfy-ws-stream-wasm = { path = "../streamfy-ws-stream-wasm", optional = true }


[dev-dependencies]
bytes = "1.10"
streamfy-future = { path = ".", features = ["net", "fixture", "timer", "fs", "retry"] }
streamfy-future-derive = { path = "streamfy-future-derive", version = "0.2.0" }
streamfy-util = { path = "../streamfy-util", features = ["fixture"] }
futures-util = { version = "0.3.31", features = ["sink", "io"] }
lazy_static = "1.5"
num_cpus = "1.17"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["macros"] }
tokio-util = { version = "0.7.15", features = ["codec", "compat"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
portpicker = "0.1.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tracing-wasm = "0.2.1"
wasm-bindgen-test = "0.3.50"
